<resources>
    <string name="app_name">AllWinSoccer</string>
    <string name="title_activity_principal">AllWinSoccer</string>
    <string name="title_activity_apostar">ApostarActivity</string>
    <string name="title_activity_tablas">TablasActivity</string>
    <string name="title_activity_grupos">GruposActivity</string>

    //ApostarActivity
    <string name="b_apostar">Ingresar</string>
    <string name="hint">Goles</string>
    <string name="equipoL"> Local</string>
    <string name="equipoV"> Visitante</string>
    <string name="fecha">Fecha: %1$s</string>

    //Recycler View
    <string name="nameLocal">Equipo </string>
    <string name="descripcion">Descripción</string>

    //Barra de navegación
    <string name="title_home">Home</string>
    <string name="title_dashboard">Apostar</string>
    <string name="title_notifications">Pronósticos</string>
    <string name="title_position">Quiniela</string>
    <string name="title_grupos">Posiciones</string>

    //PronosticoActivity
    <string name="titulo">PRÓNOSTICOS</string>
    <string name="puntos">Puntos</string>
    <string name="title_activity_pronostico">PronosticoActivity</string>
    <string name="title_activity_posicion">PosicionActivity</string>
    <string name="goles">99</string>
    <string name="tienePuntos">Partido no Finalizado</string>
    <string name="puntaje">Puntos Acumulados: %1$d</string>
    <string name="noPuntaje"> Todavia no tienes puntos</string>

    //DetallesPartidos
    <string name="detallePartido">DETALLES DEL PARTIDO</string>
    <string name="NA">NA</string>
    <string name="salir">Salir</string>
    <string name="partidoFinalizado">Partido Finalizado</string>
    <string name="partidoNoFinalizado">Partido No Finalizado</string>
    <string name="fechaPartido"> Fecha de inicio: %1$s</string>
    <string name="ubicacionPartido">Estadio: %1$s</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_update">Actualizar</string>

    //RecyclerPartido
    <string name="fecha_partido">Fecha: %1$s</string>

    //RecyclerPronostico
    <string name="puntosObtenidos"> Puntos Obtenidos: %1$s</string>

    //Recycler Grupos
    <string name="tablaGrupos">Fase de Grupos</string>
    <string name="grupoA">GRUPO A</string>
    <string name="grupoB">GRUPO B</string>
    <string name="grupoC">GRUPO C</string>
    <string name="nombreEquipo">Equipo</string>
    <string name="pJ">PJ</string>
    <string name="pG">G</string>
    <string name="pE">E</string>
    <string name="pP">P</string>
    <string name="gF">GF</string>
    <string name="gC">GC</string>
    <string name="df">DG</string>
    <string name="p">Puntos</string>
    <string name="p99">99</string>

    //Recycler Jugadores
    <string name="nombre_jugador">Nombre Jugador</string>
    <string name="posicion_jugador">Posición Jugador</string>

    //Jugadores
    <string name="porteros"> GUANTE DE ORO</string>
    <string name="jugadores">BALÓN DE ORO</string>
    <string name="eleccion">Selección: %1$s</string>

    //Reglas
    <string name="reglas">Reglas de la Quiniela</string>
    <string name="reglas_texto">
                \n Información Importante
                \n \n 1) Los resultados de los partidos de cuartos de final  y de las siguientes fases de la copa, solo se tomará en cuenta el resultado del tiempo regular, no se tomará en cuenta los penales ni el tiempo extra.
                \n \n 1.1) Se dan 5 puntos por acertar el ganador del partido.
                \n \n 1.2) Se dan 10 puntos por  acertar los goles que anota un equipo.
                \n \n 1.3) Como máximo pueden obtenerse 25 puntos por partido.
                \n \n 1.4) Se debe realizar la apuesta al menos 30 minutos antes del comienzo del partido.
                \n \n 1.5) Una vez ingresado el pronóstico no se puede cambiar.
                \n \n 2) En caso de empate en las posiciones al finalizar la quiniela, criterios de desempate
                \n \n 2.1) El usuario que haya acertado más ganadores.
                \n \n 2.2) El usuario que haya acertado mayor cantidad de resultados exactos.
                \n \n 3) Puntaje Jugador Premiados:
                \n \n 3.1) Por acertar el Balón de Oro de la copa se obtienen 20 puntos.
                \n \n 3.2) Por acertar el Guante de Oro de la copa se obtienen 20 puntos.
                \n \n 3.3) Estos puntajes de sumarán al finalizar la copa.
               "
    </string>

    <string name="cuartos">Cuartos de Final</string>
    <string name="semifinales">Semifinales</string>
    <string name="tercerlugar">Tercer Lugar</string>
    <string name="finals">Final</string>

    //Mensaje finalización Copa
    <string name="titulo_mensaje">Copa América 2019 Finalizada</string>
    <string name="mensaje">Gracias por participar en la quiniela de la Copa America 2019, puedes ver el resultado de la quiniela
            en la pestaña Quiniela.</string>

</resources>
