<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:checked="false"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:checked="false"
        android:icon="@drawable/icon_apostar"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:checked="false"
        android:icon="@drawable/iconousuario"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_position"
        android:checked="false"
        android:icon="@drawable/icon_posiciones"
        android:title="@string/title_position" />
    <item
        android:id="@+id/navigation_update"
        android:icon="@drawable/tablas"
        android:title="@string/title_grupos" />

</menu>
