<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/colorYellow">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/titulo_mensaje"
        android:textColor="@color/colorWhite"
        android:textSize="23sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="start"
                android:layout_marginEnd="5dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:text="@string/mensaje"
                />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/salir_b"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/salir" />
    </RelativeLayout>

</LinearLayout>