<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bandera_jugador"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/descripcion"
            android:src="@drawable/py"
            />

        <TextView
            android:id="@+id/nombre_jugador"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre_jugador"
            android:layout_marginStart="5dp"
            android:layout_gravity="center"
            android:gravity="center|start"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
           />

        <TextView
            android:id="@+id/posicion_jugador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|start"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:text="@string/posicion_jugador"/>

    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>