<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activites.GruposActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:itemIconTint="@color/colorWhite"
        app:itemTextColor="@color/colorWhite"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cuartos"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_cuartos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tablaGrupos"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/grupoA"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:textColor="@color/colorWhite">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/nombreEquipo"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pJ"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pG"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pE"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pP"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gF"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gC"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/df"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/p"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_grupoA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/grupoB"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/nombreEquipo"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"

                    />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pJ"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp"

                    />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pG"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pE"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pP"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gF"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gC"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/df"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/p"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_grupoB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/grupoC"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/nombreEquipo"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"

                    />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pJ"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp"

                    />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pG"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pE"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pP"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gF"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gC"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/df"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/p"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_grupoC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>