<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bLocal"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/descripcion"
            android:src="@drawable/py" />

        <TextView
            android:id="@+id/nLocal"
            android:layout_width="100dp"
            android:layout_height="match_parent"

            android:gravity="center"
            android:text="@string/nameLocal"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/gLocal"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/goles"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorWhite" />


        <TextView
            android:id="@+id/gVisit"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/goles"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/nVisit"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/nameLocal"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/bVisit"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/descripcion"
            android:src="@drawable/py" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/aux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/tienePuntos"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>
